--- a/OurStore/wwwroot/Products.html
+++ b/OurStore/wwwroot/Products.html
@@ -5,7 +5,7 @@
     <link href="../css/Product.css" rel="stylesheet" />
 
     <meta charset="utf-8" />
-    <title></title>
+    <title>Products</title>
     <template id="temp-card">
         <div class="card">
             <div class="img-w">
